--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,14 +19,10 @@
         <div class="brand-title">
           <span style="color: #41b57d">Big</span>Electronic
         </div>
-        <!-- <section class="search-bar">
-          <input type="text" name="" class="search-input">
-        </section> -->
-        <!-- <button type="button" class="search-btn">search</button> -->
         <ul>
           <li><a href="#"></a>Home</li>
           <li><a href="#"></a>About</li>
-          <li><a href="#"></a>Cart</li>
+          <li><a href="#"><i class="fas fa-shopping-cart"></i></a>Cart</li>
         </ul>
       </nav>
     </header>
@@ -43,15 +40,15 @@
           <img src="../images/home/drone.png" alt="" />
         </section>
         <section class="computers-cat">
-          <h3>Computers</h3>
-          <img src="../images/home/computer.png" alt="" />
+          <h3>Laptops</h3>
+          <img src="../images/home/computer.jpg" alt="" />
         </section>
         <section class="Consoles-cat">
           <h3>Console Games</h3>
           <img src="../images/home/consoleGames.png" alt="" />
         </section>
         <section class="SmartPhones-cat">
-          <h3>SmartPhones & Tabs</h3>
+          <h3>SmartPhones</h3>
           <img src="../images/home/SmartPhone.png" alt="" />
         </section>
       </div>
@@ -59,9 +56,9 @@
     <footer>
       <section class="contact-us">
         <h3>contact us</h3>
-        <h4>+972 549323827</h4>
-        <h4>custtomer@BigElect.com</h4>
-        <h4>Hayarkon 233, tel-aviv</h4>
+        <p>+972 549323827</p>
+        <p>custtomer@BigElect.com</p>
+        <p>Hayarkon 233, tel-aviv</p>
       </section>
       <section class="follow-us">
         <h3>Follow us</h3>
