--- a/html/smartphones.html
+++ b/html/smartphones.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/smartphone.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap"
@@ -19,14 +19,10 @@
         <div class="brand-title">
           <span style="color: #41b57d">Big</span>Electronic
         </div>
-        <!-- <section class="search-bar">
-          <input type="text" name="" class="search-input" />
-        </section>
-        <button type="button" class="search-btn">search</button> -->
         <ul>
           <li><a href="#"></a>Home</li>
           <li><a href="#"></a>About</li>
-          <li><a href="#"></a>Cart</li>
+          <li><a href="#"><i class="fas fa-shopping-cart"></i></a>Cart</li>
         </ul>
       </nav>
     </header>
@@ -34,24 +30,23 @@
       <div class="products">
         <h1>Smartphones and tablets</h1>
         <br />
-        <section class="cards-container" id="cards-container">
-        </section>
+        <section class="cards-container" id="cards-container"></section>
       </div>
     </main>
     <footer>
       <section class="contact-us">
         <h3>contact us</h3>
-        <h4>+972 549323827</h4>
-        <h4>custtomer@BigElect.com</h4>
-        <h4>Hayarkon 233, tel-aviv</h4>
+        <p>+972 549323827</p>
+        <p>custtomer@BigElect.com</p>
+        <p>Hayarkon 233, tel-aviv</p>
       </section>
       <section class="follow-us">
         <h3>Follow us</h3>
-        <img src="../images/home/facebook.png" alt="facebook" />
-        <img src="../images/home/instagram.png" alt="instagram" />
-        <img src="../images/home/twitter.png" alt="twitter" />
-        <img src="../images/home/linkedin.png" alt="linkedin" />
-        <img src="../images/home/youtube.png" alt="youtube" />
+        <a href="#"><img src="../images/home/facebook.png" alt="facebook"></a>
+        <a href="#"><img src="../images/home/instagram.png" alt="instagram"></a>
+        <a href="#"><img src="../images/home/twitter.png" alt="twitter"></a>
+        <a href="#"><img src="../images/home/linkedin.png" alt="linkedin"></a>
+        <a href="#"><img src="../images/home/youtube.png" alt="youtube"></a>
       </section>
     </footer>
     <script src="../js/products.js"></script>
