--- a/html/index.html
+++ b/html/index.html
@@ -35,22 +35,22 @@
         </section>
       </div>
       <div class="categories">
-        <section class="Drones-cat">
+        <a href="../html/drones.html"><section class="Drones-cat">
           <h3>Drones</h3>
           <img src="../images/home/drone.png" alt="" />
-        </section>
-        <section class="computers-cat">
+        </section><a/>
+        <a href="../html/laptops.html"><section class="computers-cat">
           <h3>Laptops</h3>
-          <img src="../images/home/computer.jpg" alt="" />
-        </section>
-        <section class="Consoles-cat">
+          <img src="../images/home/computer.png" alt="" />
+        </section></a>
+        <a href="../html/consoles.html"><section class="Consoles-cat">
           <h3>Console Games</h3>
           <img src="../images/home/consoleGames.png" alt="" />
-        </section>
-        <section class="SmartPhones-cat">
+        </section></a>
+        <a href="../html/smartphones.html"><section class="SmartPhones-cat">
           <h3>SmartPhones</h3>
           <img src="../images/home/SmartPhone.png" alt="" />
-        </section>
+        </section></a>
       </div>
     </main>
     <footer>
