--- a/html/smartphones.html
+++ b/html/smartphones.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/smartphone.css" />
+    <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/smartphone.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap"
@@ -20,9 +21,10 @@
           <span style="color: #41b57d">Big</span>Electronic
         </div>
         <ul>
-          <li><a href="#"></a>Home</li>
-          <li><a href="#"></a>About</li>
-          <li><a href="#"><i class="fas fa-shopping-cart"></i></a>Cart</li>
+          <li><a href="#"></a>Drones</li>
+          <li><a href="#"></a>Console games</li>
+          <li><a href="#"></a>Laptops</li>
+          <li><a href="#"><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
       </nav>
     </header>
@@ -50,7 +52,7 @@
       </section>
     </footer>
     <script src="../js/products.js"></script>
-    <script src="../js/smartphones.js"></script>
+    <script src="../js/produtsPageFunctions.js"></script>
   </body>
 </html>
 
