--- a/html/smartphones.html
+++ b/html/smartphones.html
@@ -20,9 +20,10 @@
         <div class="brand-title">
           <span style="color: #41b57d">Big</span>Electronic
         </div>
-        <ul>
+        <i class="fas fa-bars" id="burgerMenu"></i>
+        <ul id="menu" class="hide-menu" >
           <li><a href="#"></a>Drones</li>
-          <li><a href="#"></a>Console games</li>
+          <li><a href="#"></a>Game consoles</li>
           <li><a href="#"></a>Laptops</li>
           <li><a href="#"><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
@@ -30,7 +31,7 @@
     </header>
     <main>
       <div class="products">
-        <h1>Smartphones and tablets</h1>
+        <h1 class="page-category" id="smartphones & tablets">Smartphones and tablets</h1>
         <br />
         <section class="cards-container" id="cards-container"></section>
       </div>
@@ -51,6 +52,7 @@
         <a href="#"><img src="../images/home/youtube.png" alt="youtube"></a>
       </section>
     </footer>
+    <script src="../js/navbar.js"></script>
     <script src="../js/products.js"></script>
     <script src="../js/produtsPageFunctions.js"></script>
   </body>
