--- a/html/smartphones.html
+++ b/html/smartphones.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/smartphone.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
     <title>smartphones</title>
   </head>
   <body>
@@ -22,10 +19,10 @@
         </div>
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu" >
-          <li><a href="#"></a>Drones</li>
-          <li><a href="#"></a>Game consoles</li>
-          <li><a href="#"></a>Laptops</li>
-          <li><a href="#"><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
+          <li><a href="./drones.html"></a>Drones</li>
+          <li><a href="./consoles.html"></a>Game consoles</li>
+          <li><a href="./laptops.html"></a>Laptops</li>
+          <li><a href="#"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
       </nav>
     </header>
