--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/smartphone.css" />
+    <link rel="stylesheet" href="../css/pages.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
     <title>BigElectronic</title>
@@ -14,13 +14,14 @@
   <body>
     <header>
       <nav class="navbar">
-        <div class="brand-title">
+        <a href="./index.html"><div class="brand-title">
           <span style="color: #41b57d">Big</span>Electronic
-        </div>
+        </div></a>
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu" >
           <li><a href="./drones.html"></a>Drones</li>
           <li><a href="./consoles.html"></a>Game consoles</li>
+          <li><a href="./Mobiless.html"></a>Mobiless</li>
           <li><a href="./laptops.html"></a>Laptops</li>
           <li><a href="#"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
@@ -35,11 +36,11 @@
         </section>
       </div>
       <div class="categories">
-        <a href="../html/drones.html"><section class="Drones-cat">
+        <a href="./drones.html"><section class="Drones-cat">
           <h3>Drones</h3>
           <img src="../images/home/drone.png" alt="" />
         </section><a/>
-        <a href="../html/laptops.html"><section class="computers-cat">
+        <a href="./laptops.html"><section class="computers-cat">
           <h3>Laptops</h3>
           <img src="../images/home/computer.png" alt="" />
         </section></a>
@@ -47,8 +48,8 @@
           <h3>Console Games</h3>
           <img src="../images/home/consoleGames.png" alt="" />
         </section></a>
-        <a href="../html/smartphones.html"><section class="SmartPhones-cat">
-          <h3>SmartPhones</h3>
+        <a href="../html/mobiles.html"><section class="Mobiles-cat">
+          <h3>Mobiles</h3>
           <img src="../images/home/SmartPhone.png" alt="" />
         </section></a>
       </div>
