--- a/html/index.html
+++ b/html/index.html
@@ -18,11 +18,11 @@
           <span style="color: #41b57d">Big</span>Electronic
         </div></a>
         <i class="fas fa-bars" id="burgerMenu"></i>
-        <ul id="menu" class="hide-menu" >
-          <li><a href="./drones.html"></a>Drones</li>
-          <li><a href="./consoles.html"></a>Game consoles</li>
-          <li><a href="./Mobiless.html"></a>Mobiless</li>
-          <li><a href="./laptops.html"></a>Laptops</li>
+        <ul id="menu" class="hide-menu">
+          <li><a href="./drones.html">Drones</a></li>
+          <li><a href="./consoles.html">Game consoles</a></li>
+          <li><a href="./mobiles.html">Mobiles</a></li>
+          <li><a href="./laptops.html">Laptops</a></li>
           <li><a href="#"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
       </nav>
