--- a/html/consoles.html
+++ b/html/consoles.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/pages.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
@@ -19,10 +18,10 @@
         </div></a>
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu" >
-          <li><a href="./consoles.html">Drones</a></li>
+          <li><a href="./drones.html">Drones</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
-          <li><a href="#"></a><i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"></i></a></li>
           <span id="itemCounter"></span>
         </ul>
       </nav>
