--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/pages.css" />
+    <link rel="stylesheet" href="../css/pages.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
     <title>BigElectronic</title>
@@ -23,7 +23,7 @@
           <li><a href="./consoles.html">Game consoles</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
-          <li><a href="#"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
+          <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
       </nav>
     </header>
@@ -71,5 +71,7 @@
       </section>
     </footer>
     <script src="../js/navbar.js"></script>
+    <script src="../js/items.js"></script>
+    <script src="../js/produtsPageFunctions.js"></script>
   </body>
 </html>
