--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/pages.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
     <title>BigElectronic</title>
@@ -19,11 +19,11 @@
         </div></a>
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu">
-          <li><a href="./drones.html">Drones</a></li>
-          <li><a href="./consoles.html">Game consoles</a></li>
-          <li><a href="./mobiles.html">Mobiles</a></li>
-          <li><a href="./laptops.html">Laptops</a></li>
-          <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
+          <li><a href="./html/drones.html">Drones</a></li>
+          <li><a href="./html/consoles.html">Game consoles</a></li>
+          <li><a href="./html/mobiles.html">Mobiles</a></li>
+          <li><a href="./html/laptops.html">Laptops</a></li>
+          <li><a href="./index.html"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
         </ul>
       </nav>
     </header>
@@ -32,25 +32,25 @@
         <h1>Shop Now</h1>
         <h2>get more.</h2>
         <section class="circle-drone-bg">
-          <img src="../images/home/bannerDrone.png" alt="" />
+          <img src="./images/home/bannerDrone.png" alt="" />
         </section>
       </div>
       <div class="categories">
-        <a href="./drones.html"><section class="Drones-cat">
+        <a href="./html/drones.html"><section class="Drones-cat">
           <h3>Drones</h3>
-          <img src="../images/home/drone.png" alt="" />
+          <img src="./images/home/drone.png" alt="" />
         </section><a/>
-        <a href="./laptops.html"><section class="computers-cat">
+        <a href="./html/laptops.html"><section class="computers-cat">
           <h3>Laptops</h3>
-          <img src="../images/home/computer.png" alt="" />
+          <img src="./images/home/computer.png" alt="" />
         </section></a>
-        <a href="../html/consoles.html"><section class="Consoles-cat">
+        <a href="./html/consoles.html"><section class="Consoles-cat">
           <h3>Console Games</h3>
-          <img src="../images/home/consoleGames.png" alt="" />
+          <img src="./images/home/consoleGames.png" alt="" />
         </section></a>
-        <a href="../html/mobiles.html"><section class="Mobiles-cat">
+        <a href="./html/mobiles.html"><section class="Mobiles-cat">
           <h3>Mobiles</h3>
-          <img src="../images/home/SmartPhone.png" alt="" />
+          <img src="./images/home/SmartPhone.png" alt="" />
         </section></a>
       </div>
     </main>
@@ -63,15 +63,15 @@
       </section>
       <section class="follow-us">
         <h3>Follow us</h3>
-        <a href="#"><img src="../images/home/facebook.png" alt="facebook"></a>
-        <a href="#"><img src="../images/home/instagram.png" alt="instagram"></a>
-        <a href="#"><img src="../images/home/twitter.png" alt="twitter"></a>
-        <a href="#"><img src="../images/home/linkedin.png" alt="linkedin"></a>
-        <a href="#"><img src="../images/home/youtube.png" alt="youtube"></a>
+        <a href="#"><img src="./images/home/facebook.png" alt="facebook"></a>
+        <a href="#"><img src="./images/home/instagram.png" alt="instagram"></a>
+        <a href="#"><img src="./images/home/twitter.png" alt="twitter"></a>
+        <a href="#"><img src="./images/home/linkedin.png" alt="linkedin"></a>
+        <a href="#"><img src="./images/home/youtube.png" alt="youtube"></a>
       </section>
     </footer>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/items.js"></script>
-    <script src="../js/produtsPageFunctions.js"></script>
+    <script src="./js/navbar.js"></script>
+    <script src="./js/items.js"></script>
+    <script src="./js/produtsPageFunctions.js"></script>
   </body>
 </html>
