--- a/html/consoles.html
+++ b/html/consoles.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="./index.html"><div class="brand-title">
+        <a href="../index.html"><div class="brand-title">
           <span style="color: #41b57d">Big</span>Electronic
         </div></a>
         <i class="fas fa-bars" id="burgerMenu"></i>
