--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="./html/consoles.html">Game consoles</a></li>
           <li><a href="./html/mobiles.html">Mobiles</a></li>
           <li><a href="./html/laptops.html">Laptops</a></li>
-          <li><a href="./index.html"></a><i class="fas fa-shopping-cart"><span id="itemCounter"></span></i></a></li>
+          <li><a href="./index.html"></a><i class="fas fa-shopping-cart" id=cart-icon><span id="itemCounter"></span></i></a></li>
         </ul>
       </nav>
     </header>
