--- a/html/cart.html
+++ b/html/cart.html
@@ -18,7 +18,7 @@
         </div></a>
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu" >
-          <li><a href="./consoles.html">Game consoles</a></li>
+          <li><a href="./consoles.html">Consoles</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
           <li><a href="#"></a><i class="fas fa-shopping-cart"></i></a></li>
