--- a/html/laptops.html
+++ b/html/laptops.html
@@ -19,7 +19,7 @@
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu">
           <li><a href="./drones.html">Drones</a></li>
-          <li><a href="./consoles.html">Game consoles</a></li>
+          <li><a href="./consoles.html">Consoles</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"></i></a></li>
           <span id="itemCounter"></span>
