--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/pages.css">
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/pages.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
     <title>BigElectronic</title>
@@ -20,7 +20,7 @@
         <i class="fas fa-bars" id="burgerMenu"></i>
         <ul id="menu" class="hide-menu">
           <li><a href="./html/drones.html">Drones</a></li>
-          <li><a href="./html/consoles.html">Game consoles</a></li>
+          <li><a href="./html/consoles.html">Consoles</a></li>
           <li><a href="./html/mobiles.html">Mobiles</a></li>
           <li><a href="./html/laptops.html">Laptops</a></li>
           <li><a href="./index.html"></a><i class="fas fa-shopping-cart" id=cart-icon><span id="itemCounter"></span></i></a></li>
