functions for cart page

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="banner">
         <h1>Shop Now</h1>
         <h2>get more.</h2>
-        <section class="circle-drone-bg">
+        <div class="circle-drone-bg">
           <img src="./images/home/bannerDrone.png" alt="" />
-        </section>
+        </div>
       </div>
       <div class="categories">
         <a href="./html/drones.html"><section class="Drones-cat">
