--- a/html/cart.html
+++ b/html/cart.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/d6ed6dee1c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/cart.css">
-    <!-- <link rel="stylesheet" href="../css/pages.css"> -->
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <script
+      src="https://kit.fontawesome.com/d6ed6dee1c.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../css/cart.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Racing+Sans+One&display=swap"
+      rel="stylesheet"
+    />
     <title>Cart</title>
   </head>
   <body>
     <header>
       <nav class="navbar">
-        <a href="../index.html"><div class="brand-title">
-          <span style="color: #41b57d">Big</span>Electronic
-        </div></a>
+        <a href="../index.html"
+          ><div class="brand-title">
+            <span style="color: #41b57d">Big</span>Electronic
+          </div></a
+        >
         <i class="fas fa-bars" id="burgerMenu"></i>
-        <ul id="menu" class="hide-menu" >
+        <ul id="menu" class="hide-menu">
           <li><a href="./consoles.html">Consoles</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
@@ -31,87 +37,42 @@
     <main>
       <h1 class="cart-heading">Your cart</h1>
       <table class="table-heading">
-        <tr>
-          <th>PRODUCT</th>
-          <th id="Price">PRICE</th>
-          <th id="Quantity">QUANTITY</th>
-          <th>TOTAL</th>
-          <th></th>
-        </tr>
+        <thead>
+          <tr>
+            <th>PRODUCT</th>
+            <th>PRICE</th>
+            <th>QUANTITY</th>
+            <th>TOTAL</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody class="table" id="table">
+
+        </tbody>
       </table>
-      <table class="table">
-        <tr class="item-row">
-          <td class="item">
-            <img class="item-img" > 
-            <div class="item-description">
-              <h5>i-phone kklka skla</h5>
-            </div>
-          </td class="item-price">
-          <td class="item-price">230$</td>
-          <td class="item-quantity">
-            <i class="fas fa-minus"></i><span>0</span><i class="fas fa-plus"></i>
-          </td>
-          <td class="item-total">230$</td>
-          <td class="reomve-icon"><i class="fas fa-times"></i></td>
-        </tr>
-    </table>
-    <table class="table">
-      <tr class="item-row">
-        <td class="item">
-          <img class="item-img" > 
-          <div class="item-description">
-            <h5>i-phone kklka skla</h5>
-          </div>
-        </td class="item-price">
-        <td class="item-price">230$</td>
-        <td class="item-quantity">
-          <i class="fas fa-minus"></i><span>0</span><i class="fas fa-plus"></i>
-        </td>
-        <td class="item-total">230$</td>
-        <td class="reomve-icon"><i class="fas fa-times"></i></td>
-      </tr>
-  </table>
-  <table class="table">
-    <tr class="item-row">
-      <td class="item">
-        <img class="item-img" > 
-        <div class="item-description">
-          <h5>i-phone kklka skla</h5>
-        </div>
-      </td class="item-price">
-      <td class="item-price">230$</td>
-      <td class="item-quantity">
-        <i class="fas fa-minus"></i><span>0</span><i class="fas fa-plus"></i>
-      </td>
-      <td class="item-total">230$</td>
-      <td class="reomve-icon"><i class="fas fa-times"></i></td>
-    </tr>
-</table>
-    <div class="total-order">
-      <table>
-        <tr>
-          <td>Subtotal</td>
-          <td><h5>230$</h5></td>
-          <!-- <td>230$</td> -->
-        </tr>
-        <tr>
-          <td>Shipping</td>
-          <td><h5>Free</h5></td>
-          <!-- <td>Free</td> -->
-        </tr>
-        <tr>
-          <td>Total</td>
-          <td><h5>230$</h5></td>
-          <!-- <td>230$</td> -->
-        </tr>
-        <tr>
-          <td>
-            <button class="checkout-button">checkout</button>
-          </td>
-        </tr>
-      </table>
-    </div>
-        <!-- <div class="order-container">
+
+      <div class="total-order">
+        <table>
+          <tr>
+            <td>Subtotal</td>
+            <td><h5 id="sub-total">230$</h5></td>
+          </tr>
+          <tr>
+            <td>Shipping</td>
+            <td><h5>Free</h5></td>
+          </tr>
+          <tr>
+            <td>Total</td>
+            <td ><h5 id="total">230$</h5></td>
+          </tr>
+          <tr>
+            <td>
+              <button class="checkout-button">checkout</button>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <!-- <div class="order-container">
           <div class="order-head">
             <h5>Order Summry</h5>
           </div>
@@ -134,15 +95,17 @@
       </section>
       <section class="follow-us">
         <h3>Follow us</h3>
-        <a href="#"><img src="../images/home/facebook.png" alt="facebook"></a>
-        <a href="#"><img src="../images/home/instagram.png" alt="instagram"></a>
-        <a href="#"><img src="../images/home/twitter.png" alt="twitter"></a>
-        <a href="#"><img src="../images/home/linkedin.png" alt="linkedin"></a>
-        <a href="#"><img src="../images/home/youtube.png" alt="youtube"></a>
+        <a href="#"><img src="../images/home/facebook.png" alt="facebook" /></a>
+        <a href="#"
+          ><img src="../images/home/instagram.png" alt="instagram"
+        /></a>
+        <a href="#"><img src="../images/home/twitter.png" alt="twitter" /></a>
+        <a href="#"><img src="../images/home/linkedin.png" alt="linkedin" /></a>
+        <a href="#"><img src="../images/home/youtube.png" alt="youtube" /></a>
       </section>
     </footer>
+    <script src="../js/function.js"></script>
     <script src="../js/navbar.js"></script>
+    <script src="../js/cart.js"></script>
   </body>
 </html>
-
-
