--- a/html/consoles.html
+++ b/html/consoles.html
@@ -50,6 +50,7 @@
         <a href="#"><img src="../images/home/youtube.png" alt="youtube"></a>
       </section>
     </footer>
+    <script src="../js/function.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/items.js"></script>
     <script src="../js/produtsPageFunctions.js"></script>
