--- a/html/mobiles.html
+++ b/html/mobiles.html
@@ -49,9 +49,12 @@
         <a href="#"><img src="../images/home/youtube.png" alt="youtube"></a>
       </section>
     </footer>
+    <script src="../js/function.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/items.js"></script>
     <script src="../js/produtsPageFunctions.js"></script>
+
+    
   </body>
 </html>
 
