linked cart page

--- a/html/cart.html
+++ b/html/cart.html
@@ -29,7 +29,7 @@
           <li><a href="./consoles.html">Consoles</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
-          <li><a href="./laptops.html">Drones</a></li>
+          <li><a href="./drones.html">Drones</a></li>
           <span id="itemCounter"></span>
         </ul>
       </nav>
