--- a/html/mobiles.html
+++ b/html/mobiles.html
@@ -21,7 +21,7 @@
           <li><a href="./drones.html">Drones</a></li>
           <li><a href="./consoles.html">Consoles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
-          <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"></i></a></li><span id="itemCounter"></span>
+          <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i></a></li><span id="itemCounter"></span></a>
         </ul>
       </nav>
     </header>
