--- a/html/laptops.html
+++ b/html/laptops.html
@@ -21,7 +21,7 @@
           <li><a href="./drones.html">Drones</a></li>
           <li><a href="./consoles.html">Consoles</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
-          <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i></a>
           <span id="itemCounter"></span>
         </ul>
       </nav>
