fix nav bar responsive

--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
       </section>
       <section class="follow-us">
         <h3>Follow us</h3>
-        <a href="#"><img src="./images/home/facebook.png" alt="facebook"></a>
-        <a href="#"><img src="./images/home/instagram.png" alt="instagram"></a>
-        <a href="#"><img src="./images/home/twitter.png" alt="twitter"></a>
-        <a href="#"><img src="./images/home/linkedin.png" alt="linkedin"></a>
-        <a href="#"><img src="./images/home/youtube.png" alt="youtube"></a>
+        <div>
+          <a href="#"><img src="./images/home/facebook.png" alt="facebook"></a>
+          <a href="#"><img src="./images/home/instagram.png" alt="instagram"></a>
+          <a href="#"><img src="./images/home/twitter.png" alt="twitter"></a>
+          <a href="#"><img src="./images/home/linkedin.png" alt="linkedin"></a>
+          <a href="#"><img src="./images/home/youtube.png" alt="youtube"></a>
+        </div>
+        
       </section>
     </footer>
     <script src="./js/navbar.js"></script>
