--- a/html/consoles.html
+++ b/html/consoles.html
@@ -21,8 +21,8 @@
           <li><a href="./drones.html">Drones</a></li>
           <li><a href="./mobiles.html">Mobiles</a></li>
           <li><a href="./laptops.html">Laptops</a></li>
-          <li><a href="./cart.html"></a><i class="fas fa-shopping-cart"></i></a></li>
-          <span id="itemCounter"></span>
+          <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i></a></li><span id="itemCounter"></span></a>
+            <span id="itemCounter"></span>
         </ul>
       </nav>
     </header>
